separated vis into total view and corte view

--- a/menu.html
+++ b/menu.html
@@ -50,6 +50,9 @@
             <div class="menu-page-button" onmouseenter="document.getElementById('icon-4').style.width = '190px'"onmouseleave="document.getElementById('icon-4').style.width='180px'" onclick="location.href='consumos.html'"><h3 style="margin: auto;">CONSUMOS</h3>
                 <img id="icon-4" style="transition: 0.2s;" width="180px" src="https://cdn-icons-png.freepik.com/512/5246/5246231.png" alt="">
             </div>
+            <div class="menu-page-button" onmouseenter="document.getElementById('icon-5').style.width = '150px'"onmouseleave="document.getElementById('icon-5').style.width='140px'" onclick="location.href='cortes.html'"><h3 style="margin: auto;">CORTE</h3><br>
+                <img id="icon-5" style="transition: 0.2s;" width="140px" src="https://cdn3.iconfinder.com/data/icons/finance-and-banking-3/129/109-512.png" alt="">
+            </div>
             <div class="menu-page-button" onmouseenter="document.getElementById('icon-5').style.width = '150px'"onmouseleave="document.getElementById('icon-5').style.width='140px'" onclick="location.href='salesReport.html'"><h3 style="margin: auto;">VENTAS</h3><br>
                 <img id="icon-5" style="transition: 0.2s;" width="140px" src="https://cdn3.iconfinder.com/data/icons/finance-and-banking-3/129/109-512.png" alt="">
             </div>
