--- a/cortes.html
+++ b/cortes.html
@@ -57,6 +57,7 @@
                             <h4>Pastel: <span id="resumen-pastel"></span></h4>
                             <h4>Bebida: <span id="resumen-bebidas"></span></h4>
                             <h4>Varios: <span id="resumen-varios"></span></h4>
+                            <h4>Promos: <span id="resumen-promos"></span></h4>
 
                            
 <br>
