--- a/sell.html
+++ b/sell.html
@@ -98,7 +98,7 @@
             <div class="card-button" onclick="registerSales('card')" style="width: 70px; height: 50px; padding: 0;">
             <img width="45px" style="mix-blend-mode: multiply; margin-top: 3px;" src="https://static.vecteezy.com/system/resources/previews/000/357/048/original/vector-credit-card-icon.jpg" alt="">
             </div>
-            <div class="cash-button" onclick="document.getElementById('change-confirm').style.visibility = 'visible';" style="background-color: rgb(100, 172, 100); color: white; width: 90px; height: 50px; padding: 0;">
+            <div class="cash-button" onclick="if(orderTotal>0){document.getElementById('change-confirm').style.visibility = 'visible';}" style="background-color: rgb(100, 172, 100); color: white; width: 90px; height: 50px; padding: 0;">
                 <img width="50px" style="mix-blend-mode: multiply; margin-top: 0px;" src="https://t4.ftcdn.net/jpg/05/29/07/37/360_F_529073750_7FAadm3LWGT74UHCBVXhcfVC0geFpJQj.jpg" alt="">
             </div>
         </div>
