expense pane reset

--- a/sell.html
+++ b/sell.html
@@ -113,7 +113,7 @@
 
             <br>
             <div style="text-align: center; margin-top: 20px;">
-                <button class="cancel-button" onclick="document.getElementById('gastos-pane').style.visibility = 'hidden'">← Regresar</button>
+                <button class="cancel-button" onclick="resetPane();">← Regresar</button>
                 <button class="confirm-button" onclick="registerExpenseV2()">Confirmar</button>
             </div>
             
