--- a/sell.html
+++ b/sell.html
@@ -67,8 +67,8 @@
             <div id="change-confirm" class="hidden-pane">
                 <br>
                 <h3 style="text-align: left; margin: 20px;">Resumen</h3>
-                <div style="border: 1px gray; border-radius: 10px; height: 100px;">
-                    <ul style="list-style: none; height: 100px; overflow-y: scroll;" id="change-order-items">
+                <div style="border: 1px gray; border-radius: 10px; height: 90px;">
+                    <ul style="list-style: none; height: 90px; overflow-y: scroll;" id="change-order-items">
                         
                     </ul>
                 </div>
@@ -80,7 +80,9 @@
                 <button class="bill-button" onclick="calculateChange(500)">$ 500</button>
                 <br>
                 <h4 style="margin-top: 20px; margin-left: 20px; text-align: left;">Cambio: <span id="change-total" style="font-weight: 300;"></span></h4>
-                <br>
+                <div style="text-align: right; padding-right: 20px; margin-top: 0;">
+                    Recibo? <input type="checkbox" style="width: 18px; height: 18px;" id="receipt">
+                </div>
                 <button class="cancel-button" onclick="document.getElementById('change-confirm').style.visibility = 'hidden'">← Regresar</button>
                 <button class="confirm-button" onclick="registerSales('cash')">Confirmar</button>
 
