--- a/sell.html
+++ b/sell.html
@@ -81,7 +81,7 @@
                 <br>
                 <h4 style="margin-top: 20px; margin-left: 20px; text-align: left;">Cambio: <span id="change-total" style="font-weight: 300;"></span></h4>
                 <div style="text-align: right; padding-right: 20px; margin-top: 0;">
-                    Recibo? <input type="checkbox" style="width: 18px; height: 18px;" id="receipt">
+                    Recibo? <input type="checkbox" style="width: 18px; height: 18px;" id="receipt-confirm">
                 </div>
                 <button class="cancel-button" onclick="document.getElementById('change-confirm').style.visibility = 'hidden'">← Regresar</button>
                 <button class="confirm-button" onclick="registerSales('cash')">Confirmar</button>
