Added Sales Migrated methods

--- a/cortes.html
+++ b/cortes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calesa Cortes Report</title>
     <script type="module" src="dbconfig.js"></script>
-    <script type="module" src="getCortes.js"></script>
+    <script type="module" src="getCorte.js"></script>
     <link rel="stylesheet" href="salesReport.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
